# Bioinformatic-gray-sort

./: .gitignore  .gitmodules  Makefile  Makefile.config.in  README.md  configure.in  exp
example/: example1.bam
scripts/sh/: mpi_io_checker.sh  sortChecker.sh  splitter.sh  splitterp.sh
src/: clicker.cpp  clicker.hh
src/bioscience/: bio.cpp  bio.hh  bioio.cpp  bioio.hpp  bioparse.cpp  bioparse.hpp
src/main/: bamex.cpp  mpiio.cpp
src/mpi/: mpi_sorting.hpp  mpifunc.cpp  mpifunc.hpp  send_receive_logic.cpp  send_receive_logic.hpp
